# python200-homework

./: main.py  pyproject.toml  requirements.txt
assignments_01/: prefect_warmup.py  project_01.py  warmup_01.py
assignments_01/outputs/: merged_happiness.csv
assignments_01/warmup/: correlation_review.py  descriptive_stats_review.py  hypothesis_review.py  matplotlib_review.py  numpy_review.py  pandas_review.py  pipeline.py
assignments_02/: project_02.py  warmup_02.py
assignments_03/: project_03.py  warmup_03.py
assignments_04/: project_04.ipynb  warmup-04.ipynb
assignments_05/: project_05.py  warmup_05.py
assignments_06/: project_06.py  warmup_06.py
assignments_07/: project_07.py  warmup_07.py
assignments_08/: project_08.md  project_08.py  warmup_08.md
