[project]
name = "python200-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index-core==0.14.10",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.8",
    "llama-index-readers-file>=0.6.0",
    "openai>=2.33.0",
    "prefect>=3.7.1",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "smolagents>=1.25.0",
    "ucimlrepo>=0.0.7",
]
